name:                call
version:             0.1
synopsis:            The call game engine
description:         Call is a minimalistic game engine which supports 2D graphics and sounds.
homepage:            https://github.com/fumieval/call
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           (c) Fumiaki Kinoshita 2014
category:            Game
build-type:          Simple
data-files:
  shaders/*.glsl
  data/*.ttf
cabal-version:       >=1.10

flag BuildHelloWorld
    default: False

library
  exposed-modules:
    Call
    Call.Types
    Call.TH
    Call.System
    Call.Sight
    Call.Event
    Call.Internal.GLFW
    Call.Internal.PortAudio
    Call.Data.Wave
    Call.Data.Font
    Call.Data.Bitmap
    Call.Util
    Call.Util.Deck
  other-modules:
    Paths_call
  ghc-options: -Wall -fexcess-precision -O2 -threaded
  other-extensions:    Rank2Types, DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveDataTypeable, TemplateHaskell, CPP, GeneralizedNewtypeDeriving, MultiParamTypeClasses, TypeSynonymInstances, ScopedTypeVariables, FlexibleInstances, FlexibleContexts, KindSignatures, TypeFamilies, BangPatterns, ViewPatterns, LambdaCase, DataKinds, GADTs
  build-depends:
    base >=4.5 && <5,
    transformers >=0.3 && <0.5,
    control-bool >=0.2 && <0.4,
    colors >=0.2 && <0.3,
    linear >=1.10 && <1.12,
    boundingboxes >=0.2 && <0.4,
    template-haskell == 2.*,
    directory,
    filepath,
    mtl >=2.0 && <2.7,
    reflection >=1.4 && <1.7,
    containers >=0.5 && <0.7,
    vector >=0.9 && <0.13,
    GLFW-b >=1.3 && <2,
    lens >=4.0 && <5,
    OpenGL == 2.9.*,
    OpenGLRaw >=1.4 && <1.7,
    JuicyPixels == 3.*,
    JuicyPixels-util >= 0.2 && <0.4,
    WAVE >=0.1 && <0.2,
    freetype2 >=0.1 && <0.2,
    random ==1.*,
    hashable >=1.2 && <1.3,
    objective >= 0.4 && <0.5,
    bindings-portaudio,
    clean-unions >= 0.1 && <0.3,
    text >= 1.0 && <1.5,
    distributive == 0.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hello-world
  ghc-options: -threaded
  main-is: examples/hello-world.hs
  if flag(BuildHelloWorld)
    buildable: True
  else
    buildable: False
  build-depends: base == 4.*, call <= 0.1, lens == 4.*
  default-language:    Haskell2010